# svgrasterize.py

./: README.md  font_speciment.py  font_transform.py  fonts.svgz  pyproject.toml  spritify.py  svgrasterize.py  ttf2svg
